deploy/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    name: api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: pepp.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: client
              port: 
                number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  labels:
    name: gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /graphql$1
spec:
  ingressClassName: nginx
  rules:
  - host: pepp.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/graphql(/|$)(.*)
        backend:
          service:
            name: gateway
            port: 
              number: 8080

---

# users ingress (with rewrite)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-ingress
  labels:
    name: users-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /auth/$2
spec:
  ingressClassName: nginx
  rules:
  - host: pepp.com
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/auth(/|$)(.*)
        backend:
          service:
            name: users
            port:
              number: 8080
